# CppLab6

./: CMakeLists.txt  CppLab6.cpp  CppLab6.vcxproj  CppLab6.vcxproj.filters  class.cpp  class.h  test.cpp
Debug/: CppLab6.exe.recipe  CppLab6.ilk  vc142.idb
Debug/CppLab6.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CppLab6.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
